# guix-install

./: .envrc  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  manifest.scm
.claude/skills/guix-install-test/: SKILL.md
.github/workflows/: build.yml
crates/guix-install/: Cargo.toml
crates/guix-install-core/: Cargo.toml
crates/guix-install-core/keys/: substitutes.guix.gofranz.com.pub
crates/guix-install-core/src/: config.rs  connman.rs  guix_ops.rs  hardware.rs  install.rs  installer_log.rs  keyboard.rs  lib.rs  mode.rs  network.rs  passwd.rs  progress.rs  resume.rs  run.rs  ui.rs
crates/guix-install-core/src/disk/: detect.rs  format.rs  mod.rs  partition.rs
crates/guix-install-core/src/scheme/: channels.rs  operating_system.rs
crates/guix-install-core/src/steps/: data.rs  disk.rs  encryption.rs  keyboard.rs  locale.rs  mod.rs  network.rs  summary.rs  timezone.rs
crates/guix-install-core/src/steps/data/: locales.txt  timezones.txt
crates/guix-install-core/tests/: connman_connect.rs  connman_parsing.rs  disk_detection.rs  enterprise.rs  keyboard_parsing.rs  scheme_generation.rs  scheme_validate.rs  step_navigation.rs
crates/guix-install-core/tests/fixtures/: connmanctl-fake.sh
crates/guix-install-gui/: Cargo.toml
crates/guix-install-gui/src/: app.rs  bridge.rs  main.rs  styles.rs
crates/guix-install/src/: main.rs  repl.rs
keys/: packages.pantherx.org.pub
src/: config.rs  exec.rs  install.rs  lib.rs  main.rs  mode.rs  passwd.rs  repl.rs  resume.rs  ui.rs  wifi.rs
src/disk/: action.rs  detect.rs  format.rs  mod.rs  mount.rs
src/enterprise/: mod.rs
src/scheme/: mod.rs  operating_system.rs
src/steps/: desktop.rs  encryption.rs  hostname.rs  locale.rs  mod.rs  mode.rs  summary.rs  timezone.rs  users.rs
tests/: disk_detection.rs  enterprise.rs  scheme_generation.rs  scheme_validate.rs  step_navigation.rs
