[package]
name = "guix-install"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
dialoguer = "0.11"
console = "0.15"
ureq = "2"
tar = "0.4"
flate2 = "1"
pwhash = "1"
zeroize = "1"
rustix = { version = "0.38", features = ["mount", "process"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
