[package]
name = "guix-install"
version = "0.1.2"
edition = "2024"
authors = ["Franz Geffke <mail@gofranz.com>"]
license = "GPL-3.0-only"
description = "Interactive Rust installer for Guix System (Guix, Nonguix, Panther, and Enterprise modes)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
dialoguer = "0.11"
console = "0.15"
ureq = "2"
tar = "0.4"
flate2 = "1"
pwhash = "1"
zeroize = "1"
rustix = { version = "0.38", features = ["mount", "process", "thread"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
